--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+  <a href="/login">Log In</a>
+  <a href="/signin">Sign In</a>
   <a href="/gym-list">Browse Gyms</a>
   <a href="/pool-list">Browse Swimming Pools</a>
   <a href="/park-list">Browse Skateparks</a>
