start of user signup

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
 
 <body>
   <a href="/login">Log In</a>
-  <a href="/signin">Sign In</a>
+  <a href="/signup">Sign Up</a>
   <a href="/gym-list">Browse Gyms</a>
   <a href="/pool-list">Browse Swimming Pools</a>
   <a href="/park-list">Browse Skateparks</a>
