--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@ body {
   padding: 50px;
   margin: 0;
   padding: 0;
-  font-family: 'Khula', sans-serif; }
+  font-family: "Khula", sans-serif; }
 
 section {
   padding: 0 20px; }
@@ -65,5 +65,17 @@ h2 {
 #section-sport {
   background-color: white;
   height: 100vh; }
+
+.error-message {
+  border: 3px solid;
+  border-radius: 5px;
+  color: tomato;
+  padding: 10px; }
+
+.success-message {
+  border: 3px solid;
+  border-radius: 3px;
+  color: chartreuse;
+  padding: 10px; }
 
 /*# sourceMappingURL=style.css.map */
