--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,8 +1,7 @@
-// FONTS 
+// FONTS
 //=============================
 
-@import url('https://fonts.googleapis.com/css?family=Khula:400,800');
-
+@import url("https://fonts.googleapis.com/css?family=Khula:400,800");
 
 //=============================
 
@@ -10,7 +9,7 @@ body {
   padding: 50px;
   margin: 0;
   padding: 0;
-  font-family: 'Khula', sans-serif;
+  font-family: "Khula", sans-serif;
 }
 
 section {
@@ -36,9 +35,8 @@ footer p {
   text-align: center;
 }
 
-// CARDS 
+// CARDS
 //=============================
-
 
 // SESSION HOME SCREEN
 
@@ -77,7 +75,6 @@ p {
 .session-content-left img {
   width: 40px;
   padding-bottom: 5px;
-
 }
 
 #section-player {
@@ -93,4 +90,21 @@ h2 {
 #section-sport {
   background-color: white;
   height: 100vh;
+}
+
+// FLASH MESSAGES
+//=============================
+
+.error-message {
+  border: 3px solid;
+  border-radius: 5px;
+  color: tomato;
+  padding: 10px;
+}
+
+.success-message {
+  border: 3px solid;
+  border-radius: 3px;
+  color: chartreuse;
+  padding: 10px;
 }
