choosing a sport after signup : done

--- a/views/auth-views/signup-sports.hbs
+++ b/views/auth-views/signup-sports.hbs
@@ -1,10 +1,12 @@
-<h2>Select a Sport</h2>
+<h1>Welcome</h1>
 
-<form autocomplete="off" action="/process-sports-signup">
+<h2>Please Select a Sport</h2>
+
+<form autocomplete="off" action="/process-sports-signup" method="POST">
   <div class="autocomplete" style="width:300px;">
     <input id="myInput" type="text" name="mySport" placeholder="Type a Sport">
   </div>
-  <input type="submit">
+  <button>Validate</button>
 </form>
 
 <script>
