js file for signup-sports

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <section id="section-header">
   <div>
     <img class="logo-main" src="./images/logos/logo-main-blanc.png" alt="">
-    <h2>Choose your <span>SPØRTS</span><br />Choose you <span>BUDDIES</span></h2>
+    <h2>Choose your <span>SPØRTS</span><br />Choose your <span>BUDDIES</span></h2>
     <a class="btn-header" href="#0">+</a>
   </div>
 </section>
