Full day of work

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -72,13 +72,14 @@ small {
   right: 5%;
 }
 
-
 // HOME Ids
 //=============================
 #section-header {
   height: 70vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5) 0%,
-    rgba(0, 0, 0, 0.4) 70%),
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.4) 70%
+    ),
     url("../images/home/tennis.jpg");
   background-size: cover;
   background-position: center center;
@@ -97,8 +98,10 @@ small {
 }
 
 #section-player {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5) 0%,
-    rgba(0, 0, 0, 0.3) 70%),
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.3) 70%
+    ),
     url("../images/home/find-buddy.jpg");
   background-size: cover;
   background-position: center center;
@@ -107,8 +110,10 @@ small {
 
 #section-article {
   color: white;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0%,
-    rgba(0, 0, 0, 0.2) 50%),
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.4) 0%,
+      rgba(0, 0, 0, 0.2) 50%
+    ),
     url("../images/home/tennis.jpg");
   background-size: cover;
   background-position: center center;
@@ -145,4 +150,12 @@ small {
   border-radius: 3px;
   color: chartreuse;
   padding: 10px;
+}
+
+// GOOGLE MAP
+//=============================
+
+#map {
+  height: 700px; /* The height is 400 pixels */
+  width: 100%; /* The width is the width of the web page */
 }
