--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,4 +106,10 @@ small {
   color: chartreuse;
   padding: 10px; }
 
+#map {
+  height: 700px;
+  /* The height is 400 pixels */
+  width: 100%;
+  /* The width is the width of the web page */ }
+
 /*# sourceMappingURL=style.css.map */
