full day of work with maps

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -66,9 +66,8 @@
     <p>Made with 🏀 by Alex Joly and Jules Badin.</p>
   </footer>
 
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCID8KAZM7F9ZRt7ICKf8tCFog8gJss6PE&callback=initMap">
-    </script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key={{API_KEY}}&callback=initMap">
+  </script>
   <script src="/javascripts/script.js"></script>
 </body>
 
