--- a/views/index.hbs
+++ b/views/index.hbs
@@ -35,7 +35,7 @@
 
 <section id="section-player">
   <h2>Find a player</h2>
-  <p>Looking for someone to play with you? Here are some players that also look for partners.</p>
+  <p>Looking for someone to play with ? Here are some players that also look for partners this week.</p>
 
   <div class="cards-container">
 
@@ -88,7 +88,7 @@
 
 <section id="section-sport">
   <h2>Discover new sports</h2>
-  <p>You got bored by your sport ? Don't worrie, here are some other sports that should make you have fun again.
+  <p>You got bored by your sport ? Don't worry, here are some other sports that should make you have fun again.
   </p>
 
   <div class="badges-container">
@@ -136,13 +136,13 @@
 
 </section>
 
-<section id="section-article">
-  <h2>Rolland Garos the most amazing place for tennis</h2>
+<section class="climb" id="section-article2">
+  <h4 class="h4climb">Featured this Week</h4>
+  <h2 class="h2climb">Centre Sportif Jacqueline Auriol</h2>
 
   <div class="article-subheader">
     <hr>
-    <p>Incidiostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo codcs. incidiostrud exercitation ullamco
-      nisi ut aliquip ex ea commodo codcs. strud exercitation ullamco laboris nisi ut aliquip ex ea commodo codcs.</p>
+    <p><b>France's tallest indoor wall and Europe's second with 17 meters high</b></p>
 
   </div>
 
