--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -136,6 +136,23 @@ small {
   text-align: center;
 }
 
+.climb {
+  color: white;
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.4) 0%,
+      rgba(0, 0, 0, 0.2) 50%
+    ),
+    url("../images/article/climbing.jpg");
+  background-size: cover;
+  background-position: center center;
+  height: 70vh;
+  position: relative;
+}
+
+.h4climb {
+  padding-top: 30px;
+}
+
 // FLASH MESSAGES
 //=============================
 
