--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -66,8 +66,7 @@
     <p>Made with 🏀 by Alex Joly and Jules Badin.</p>
   </footer>
 
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCID8KAZM7F9ZRt7ICKf8tCFog8gJss6PE&callback=initMap"
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key={{KEY}}&callback=initMap"
     type="text/javascript"></script>
   <script src="/javascripts/script.js"></script>
 </body>
