--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -66,7 +66,7 @@
     <p>Made with 🏀 by Alex Joly and Jules Badin.</p>
   </footer>
 
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key={{KEY}}&callback=initMap"
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=process.env.GOOGLE_API_KEY&callback=initMap"
     type="text/javascript"></script>
   <script src="/javascripts/script.js"></script>
 </body>
