road to map on bad picto

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -75,9 +75,11 @@
       <img src="./images/sports-icons/rugby-ball.svg" alt="">
     </div>
 
-    <div class="badge">
-      <img src="./images/sports-icons/badminton.svg" alt="">
-    </div>
+    <a href="/map">
+      <div class="badge">
+        <img src="./images/sports-icons/badminton.svg" alt="">
+      </div>
+    </a>
 
     <div class="badge">
       <img src="./images/sports-icons/swimming-pool.svg" alt="">
