--- a/views/index.hbs
+++ b/views/index.hbs
@@ -46,7 +46,7 @@
 
 <section id="section-sport">
   <h2>Discover new sports</h2>
-  <p>You got bored by your sport ? Don't worry, here are some other sports that should make you have fun again.
+  <p>You got bored by your sport ? Don't worry, here are some other sports that you should enjoy.
   </p>
 
   <div class="badges-container">
@@ -75,11 +75,12 @@
       <img src="./images/sports-icons/rugby-ball.svg" alt="">
     </div>
 
-    <a href="/map">
-      <div class="badge">
+    <div class="badge">
+      <a href="/map">
         <img src="./images/sports-icons/badminton.svg" alt="">
-      </div>
-    </a>
+      </a>
+    </div>
+
 
     <div class="badge">
       <img src="./images/sports-icons/swimming-pool.svg" alt="">
