--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,6 +130,6 @@ small {
   /* The height is 400 pixels */
   width: 100%;
   /* The width is the width of the web page */
-  padding-top: 50px; }
+  margin-top: 50px; }
 
 /*# sourceMappingURL=style.css.map */
