--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -187,5 +187,5 @@ small {
   /* The height is 400 pixels */
   width: 100%;
   /* The width is the width of the web page */
-  padding-top: 50px;
+  margin-top: 50px;
 }
