--- a/views/index.hbs
+++ b/views/index.hbs
@@ -107,7 +107,7 @@
   </div>
 
 
-  <a class="btn-main" href="#0">Read The Article</a>
+  <a class="btn-main" href="/gym-list/5c61649e2af14b1f18515b7c">About this place</a>
 
 
 </section>
