Booking on a gym page done

--- a/views/gym-detail.hbs
+++ b/views/gym-detail.hbs
@@ -2,7 +2,7 @@
 
   <h2>{{gymItem.name}}</h2>
   <p>{{gymItem.address}}, {{gymItem.arrondissement}}</p>
-  <a class="btn-main" href="#0">Book a Session</a>
+  <a class="btn-main" href="/gym-list/{{gymItem._id}}/create-rdv">Book a Session</a>
   <a class="go-back" href="/gym-list"> -- Go back to the list</a>
 </section>
 
