--- a/views/rdv-views/gym-on-page-rdv-form.hbs
+++ b/views/rdv-views/gym-on-page-rdv-form.hbs
@@ -1,4 +1,4 @@
-<h2>Create a new RDV at {{gymItem.name}}</h2>
+<h2>Create a new Session at {{gymItem.name}}</h2>
 
 <section>
   <form autocomplete="off" action="/process-rdv-gympage" method="POST">
