--- a/views/index.hbs
+++ b/views/index.hbs
@@ -124,7 +124,7 @@
   </div>
   <div>
     <img src="./images/home/reinsurance/success.svg" alt="">
-    <p>Blah</p>
+    <p>Security</p>
   </div>
 
 </section>
