fixed article link

--- a/views/map.hbs
+++ b/views/map.hbs
@@ -2,7 +2,7 @@
 
   <div>
     <h2>Consult the map</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum sapiente error odio?</p>
+    <p>Places in Paris where you can play Badminton</p>
     <a class="btn-map" href="/">Back to Home</a>
   </div>
 
