fixed line height

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -62,7 +62,7 @@ h2 {
 
 h4 {
   font-size: 1.2em;
-  line-height: 0px;
+  line-height: 1em;
 }
 
 small {
@@ -86,8 +86,10 @@ small {
 //=============================
 #section-header {
   height: 70vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5) 0%,
-    rgba(0, 0, 0, 0.4) 70%),
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.4) 70%
+    ),
     url("../images/home/tennis.jpg");
   background-size: cover;
   background-position: center center;
@@ -107,8 +109,10 @@ small {
 }
 
 #section-player {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5) 0%,
-    rgba(0, 0, 0, 0.3) 70%),
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.5) 0%,
+      rgba(0, 0, 0, 0.3) 70%
+    ),
     url("../images/home/find-buddy.jpg");
   background-size: cover;
   background-position: center center;
@@ -118,8 +122,10 @@ small {
 
 #section-article {
   color: white;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0%,
-    rgba(0, 0, 0, 0.2) 50%),
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.4) 0%,
+      rgba(0, 0, 0, 0.2) 50%
+    ),
     url("../images/home/tennis.jpg");
   background-size: cover;
   background-position: center center;
@@ -143,8 +149,10 @@ small {
 
 .climb {
   color: white;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.4) 0%,
-    rgba(0, 0, 0, 0.2) 50%),
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.4) 0%,
+      rgba(0, 0, 0, 0.2) 50%
+    ),
     url("../images/article/climbing.jpg");
   background-size: cover;
   background-position: center center;
