--- a/views/partials/rdv-card.hbs
+++ b/views/partials/rdv-card.hbs
@@ -4,7 +4,7 @@
 <div class="card-session">
   <div class="session-content-left">
     <h3>{{this.location}}</h3>
-    <p>{{this.sport}} with @AlexJoly</p>
+    <p>{{this.sport}}</p>
 
 
     <img class="profile-pic" src="{{this.userIcon}}" alt="pic" />
